# Babylonian

./: .gitignore  DESCRIPTION  LICENSE  NAMESPACE  README.md  test.R
R/: aaa-state.R  animation.R  babylon.R  export.R  interaction.R  lights.R  materials-advanced.R  materials.R  mesh-analysis.R  mesh-utils.R  primitives.R  scene-core.R  scene-effects.R  scene-layout.R
man/: apply_scene_state.Rd  as_babylon_light.Rd  as_babylon_mesh.Rd  as_babylon_points.Rd  babylon.Rd  bg3d.Rd  clear_scene3d.Rd  create_pose_3d.Rd  digit.fixed.Rd  digitize_landmarks.Rd  dof3d.Rd  edit_scene3d.Rd  extract_geometry3d.Rd  get_material3d.Rd  heatmap_scale.Rd  import_mesh.Rd  import_model3d.Rd  last_par3d.Rd  last_scene_state.Rd  light3d.Rd  light3d_directional.Rd  light3d_hemispheric.Rd  light3d_point.Rd  light3d_spot.Rd  lighting_preset3d.Rd  lines3d.Rd  list_materials3d.Rd  material_ref3d.Rd  meshDist.Rd  model_info3d.Rd  morph_path3d.Rd  morph_target3d.Rd  node_material3d.Rd  orbit_path3d.Rd  paint_vertices3d.Rd  paired_scene3d.Rd  par3d.Rd  pbr_material3d.Rd  planes3d.Rd  plot.babylon_mesh.Rd  (+29 more)
python/: EDIT_SCENE3D_PARITY_TODO.md  README.md  app.py  babylonian.ipynb  pyproject.toml  test_edit_scene3d.py
python/src/babylonian/: __init__.py  core.py  edit_widget.js  interaction.py  shiny.py  widget.js
python/src/babylonian/lib/: babylon_widget.js  snapshot_capture.js
python/src/babylonian_py.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
shared/: README.md  babylonian_animation.schema.json  babylonian_editor_state.schema.json  babylonian_scene.schema.json
tests/: testthatR.R
(+8 files in other folders)
