[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "babylonian-py"
version = "0.1.0"
description = "Python convenience wrappers for Babylonian scene specs and notebook rendering."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Hallgrimsson Lab"}
]
dependencies = [
  "anywidget>=0.9.0",
  "traitlets>=5.0"
]

[project.optional-dependencies]
trimesh = ["trimesh>=4.0"]
notebook = ["ipython>=8.0"]
shiny = ["shiny>=0.7.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
babylonian = ["widget.js", "lib/*.js"]
